lessons/280/6-ingress-canary/1-service-v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-v1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: catalog-v1
