lessons/280/6-ingress-canary/3-service-v2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-v2
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: catalog-v2
