lessons/280/6-ingress-canary/5-ingress-v1.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog
spec:
  ingressClassName: external
  rules:
    - host: catalog.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: catalog-v1
                port:
                  number: 8080
